# KaraokeV2

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  config.docker.yaml  config.example.yaml  docker-compose.yml  docker-run.sh
.github/ISSUE_TEMPLATE/: bug-report.md  new-feature.md
importer/: Cargo.toml
importer/src/: main.rs
karaoke-server/: Cargo.toml
karaoke-server/src/: config.rs  main.rs  now_playing.rs  songs.rs  websocket.rs
karaokeparty/: README.md  pubspec.yaml
karaokeparty/android/app/: build.gradle
karaokeparty/android/app/src/main/: AndroidManifest.xml
karaokeparty/android/app/src/main/kotlin/com/example/karaokeparty/: MainActivity.kt
karaokeparty/ios/Runner/: Info.plist
karaokeparty/ios/Runner.xcodeproj/: project.pbxproj
karaokeparty/lib/: intents.dart  main.dart
karaokeparty/lib/add_dialog/: add_dialog.dart
karaokeparty/lib/api/: api.dart  host_detector.io.dart  host_detector.web.dart  song_cache.dart
karaokeparty/lib/api/cubit/: connection_cubit.dart  connection_state.dart  playlist_cubit.dart  playlist_state.dart
karaokeparty/lib/browse/: browse.dart
karaokeparty/lib/i18n/: _unused_translations.json
karaokeparty/lib/i18n/de/: audioplayer.i18n.json  core.i18n.json  login.i18n.json  playlist.i18n.json  search.i18n.json
karaokeparty/lib/i18n/en/: audioplayer.i18n.json  core.i18n.json  login.i18n.json  playlist.i18n.json  search.i18n.json
karaokeparty/lib/login/: login.dart
karaokeparty/lib/model/: playlist_entry.dart  song.dart
karaokeparty/lib/now_playing/: bug_report.dart  now_playing.dart
karaokeparty/lib/playlist/: admin_list.dart  playlist.dart  user_list.dart
karaokeparty/lib/search/: empty_state.dart  search.dart  suggest_song.dart
karaokeparty/lib/search/cubit/: search_filter_cubit.dart  search_filter_state.dart
karaokeparty/lib/widgets/: audio_player.dart  filter_bar.dart  lyrics.dart  song_card.dart  song_details_dialog.dart  song_player.dart
karaokeparty/linux/: CMakeLists.txt  my_application.cc
karaokeparty/macos/Runner.xcodeproj/: project.pbxproj
karaokeparty/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
karaokeparty/macos/Runner/Configs/: AppInfo.xcconfig
karaokeparty/test/: widget_test.dart
karaokeparty/web/: flutter_bootstrap.js  index.html  manifest.json
karaokeparty/windows/: CMakeLists.txt
karaokeparty/windows/runner/: Runner.rc  main.cpp
