[package]
name = "importer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
ultrastar-txt = { git = "https://github.com/anlumo/ultrastar-txt.git" }
ffmpeg-next = "7.0.1"
