[package]
name = "karaoke-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2", features = ["ws"] }
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
mime_guess = "2.0.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
tokio = { version = "1.35.1", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "io-util",
] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
