[package]
name = "karaoke-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2", features = ["ws"] }
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
futures-util = "0.3.29"
log = { version = "0.4.20", features = ["std"] }
mime_guess = "2.0.4"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["trace"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tantivy = "0.21.1"
tokio = { version = "1.35.1", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = { version = "0.1.40", features = [
    "async-await",
    "log",
    "log-always",
] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
