[package]
name = "karaoke-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = { version = "0.7.2", features = ["ws"] }
clap = { version = "4.4.11", features = ["derive"] }
futures-util = "0.3.29"
log = { version = "0.4.20", features = ["std"] }
mime_guess = "2.0.4"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tantivy = { version = "0.21.1", default-features = false }
tokio = { version = "1.35.1", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tracing = { version = "0.1.40", features = [
    "async-await",
    "log",
    "log-always",
] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
time = { version = "0.3.22", features = ["formatting"] }
csv = "1.3.0"
log4rs = "1.2.0"
serde_yaml = "0.9.30"
zstd-sys = "=2.0.9" # workaround for https://github.com/gyscos/zstd-rs/issues/270
sha256 = "1.5.0"
